2010-09-24  Sancho Lerena <slerena@artica.es>

	* install.php: Updated version and build


2010-09-24  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/events/events.php: fixed the lost $url var, recovered from the
	last version of SVN.
	
	Fixes: #3071767

2010-09-23  Raúl Mateos <raulofpandora@gmail.com>

	* extensions/users_connected.php: Show text to admin if no other
	user connected.
	TO DO: This extension gives non-accurate information due to the use 
	of timestamp in one hour since the login event. It should be
	improved to check logout events in table.

2010-09-23  Raúl Mateos <raulofpandora@gmail.com>

	* godmode/users/user_list.php: Able to edit profiles.
	
	* godmode/users/configure_profile.php: New page, based on the old
	profile one (that should be deleted if all it's OK)
	
	* godmode/menu.php: Removed profiles menu entry.
	
	* godmode/alerts/alert_list.list.php: Centered several icons.

2010-09-23  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_api.php: added function "set_module_data" for to hook
	call to create module data across web api.

2010-09-23  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/events/events.php: fixed the re-include two time the file.
	
	Fixes:  #3073577

2010-09-22  Sancho Lerena <slerena@artica.es>

	* pandora_console.spec: Spec for SUSE updated. Version, and some dep
	names updated.

2010-09-22  Miguel de Dios  <miguel.dedios@artica.es>

	* ChangeLog: fixed previous commit of jobmate that erase some lines of
	ChangeLog. 
	
	* index.php: cleaned source code style.
	
	* mobile/include/style/main.css: added style for the login mobile page.
	
	* mobile/include/user.class.php: the "loginShow" function have a nice
	login box with some style.
	
	* mobile/images/transparent_pixel.gif, mobile/images/key.gif: added image
	files for the login page. The key image is created for "barretr" in
	"http://www.openclipart.org/detail/3330", thanks.
	